// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JourneyOps exportJourney() 1: Export journey 'FrodoTestJourney3' w/o dependencies 1`] = `
{
  "circlesOfTrust": {},
  "emailTemplates": {},
  "innerNodes": {
    "60ff8a50-6be3-4eb6-a031-387897e7ca9a": {
      "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "969732594",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "78164e4b-ac34-46fb-b271-2ae0b1c4dda3": {
      "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "1320178888",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "99f2d026-8d93-492d-b97f-c7331dc31c6d": {
      "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "-2073692024",
      "_type": {
        "_id": "ValidatedUsernameNode",
        "collection": true,
        "name": "Platform Username",
      },
      "usernameAttribute": "userName",
      "validateInput": false,
    },
    "e165f3c7-babc-43be-8b3c-e99f1e735908": {
      "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "280483221",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "google",
        "facebook",
        "azure",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
    "eb302165-5014-4538-8baf-8cdce05a50e6": {
      "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1791446947",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "adfs",
        "github",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
  },
  "meta": Any<Object>,
  "nodes": {
    "46643303-aeb2-4873-9df1-59db4958cc34": {
      "_id": "46643303-aeb2-4873-9df1-59db4958cc34",
      "_outcomes": [
        {
          "displayName": "known",
          "id": "known",
        },
        {
          "displayName": "unknown",
          "id": "unknown",
        },
      ],
      "_rev": "-99193033",
      "_type": {
        "_id": "ScriptedDecisionNode",
        "collection": true,
        "name": "Scripted Decision",
      },
      "inputs": [
        "*",
      ],
      "outcomes": [
        "known",
        "unknown",
      ],
      "outputs": [
        "*",
      ],
      "script": "739bdc48-fd24-4c52-b353-88706d75558a",
    },
    "4b5d893f-0ade-4385-88d6-a281754fe498": {
      "_id": "4b5d893f-0ade-4385-88d6-a281754fe498",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "-1901002889",
      "_type": {
        "_id": "SocialProviderHandlerNode",
        "collection": true,
        "name": "Social Provider Handler Node",
      },
      "clientType": "BROWSER",
      "script": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "usernameAttribute": "userName",
    },
    "9381fc70-1a31-40de-85de-23faf97e7b28": {
      "_id": "9381fc70-1a31-40de-85de-23faf97e7b28",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1072614526",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
      "_id": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "TRUE",
        },
        {
          "displayName": "False",
          "id": "FALSE",
        },
        {
          "displayName": "Locked",
          "id": "LOCKED",
        },
        {
          "displayName": "Cancelled",
          "id": "CANCELLED",
        },
        {
          "displayName": "Expired",
          "id": "EXPIRED",
        },
      ],
      "_rev": "1132424611",
      "_type": {
        "_id": "IdentityStoreDecisionNode",
        "collection": true,
        "name": "Identity Store Decision",
      },
      "minimumPasswordLength": 8,
      "useUniversalIdForUsername": true,
    },
    "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
      "_id": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "-1965514998",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
          "displayName": "Username",
          "nodeType": "ValidatedUsernameNode",
        },
        {
          "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
      "_id": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
      "_outcomes": [
        {
          "displayName": "Email Sent",
          "id": "EMAIL_SENT",
        },
        {
          "displayName": "Email Not Sent",
          "id": "EMAIL_NOT_SENT",
        },
      ],
      "_rev": "-846450844",
      "_type": {
        "_id": "EmailTemplateNode",
        "collection": true,
        "name": "Email Template Node",
      },
      "emailAttribute": "mail",
      "emailTemplateName": "welcome",
      "identityAttribute": "userName",
    },
    "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
      "_id": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "1765887235",
      "_type": {
        "_id": "product-Saml2Node",
        "collection": true,
        "name": "SAML2 Authentication",
      },
      "allowCreate": true,
      "authComparison": "MINIMUM",
      "authnContextClassRef": [],
      "authnContextDeclRef": [],
      "binding": "HTTP_ARTIFACT",
      "forceAuthn": false,
      "idpEntityId": "urn:federation:MicrosoftOnline",
      "isPassive": false,
      "metaAlias": "/alpha/iSPAzure",
      "nameIdFormat": "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
      "requestBinding": "HTTP_REDIRECT",
    },
    "e60801b1-9b6f-4017-83d4-1695ca982022": {
      "_id": "e60801b1-9b6f-4017-83d4-1695ca982022",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "true",
        },
        {
          "displayName": "False",
          "id": "false",
        },
      ],
      "_rev": "1857773376",
      "_type": {
        "_id": "InnerTreeEvaluatorNode",
        "collection": true,
        "name": "Inner Tree Evaluator",
      },
      "tree": "FrodoTestJourney2",
    },
  },
  "saml2Entities": {},
  "scripts": {},
  "socialIdentityProviders": {},
  "themes": [],
  "tree": {
    "_id": "FrodoTestJourney3",
    "_rev": "1422551525",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
}
`;

exports[`JourneyOps exportJourney() 2: Export journey 'FrodoTestJourney3' w/ dependencies 1`] = `
{
  "circlesOfTrust": {
    "AzureCOT": {
      "_id": "AzureCOT",
      "_rev": "1338945551",
      "_type": {
        "_id": "circlesoftrust",
        "collection": true,
        "name": "Circle of Trust",
      },
      "status": "active",
      "trustedProviders": [
        "iSPAzure|saml2",
        "https://idc.scheuber.io/am/saml2/IDPAzure|saml2",
        "urn:federation:MicrosoftOnline|saml2",
        "https://sts.windows.net/711ffa9c-5972-4713-ace3-688c9732614a/|saml2",
        "SPAzure|saml2",
      ],
    },
  },
  "emailTemplates": {
    "welcome": {
      "_id": "emailTemplate/welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome. Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome. Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{
 background-color:#324054;
 color:#5e6d82;
 padding:60px;
 text-align:center
}
a{
 text-decoration:none;
 color:#109cf1
}
.content{
 background-color:#fff;
 border-radius:4px;
 margin:0 auto;
 padding:48px;
 width:235px
}
",
      "subject": {
        "en": "Your account has been created",
      },
    },
  },
  "innerNodes": {
    "60ff8a50-6be3-4eb6-a031-387897e7ca9a": {
      "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "969732594",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "78164e4b-ac34-46fb-b271-2ae0b1c4dda3": {
      "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "1320178888",
      "_type": {
        "_id": "ValidatedPasswordNode",
        "collection": true,
        "name": "Platform Password",
      },
      "passwordAttribute": "password",
      "validateInput": false,
    },
    "99f2d026-8d93-492d-b97f-c7331dc31c6d": {
      "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
      "_outcomes": [
        {
          "displayName": "Outcome",
          "id": "outcome",
        },
      ],
      "_rev": "-2073692024",
      "_type": {
        "_id": "ValidatedUsernameNode",
        "collection": true,
        "name": "Platform Username",
      },
      "usernameAttribute": "userName",
      "validateInput": false,
    },
    "e165f3c7-babc-43be-8b3c-e99f1e735908": {
      "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "280483221",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "google",
        "facebook",
        "azure",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
    "eb302165-5014-4538-8baf-8cdce05a50e6": {
      "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1791446947",
      "_type": {
        "_id": "SelectIdPNode",
        "collection": true,
        "name": "Select Identity Provider",
      },
      "filteredProviders": [
        "adfs",
        "github",
      ],
      "identityAttribute": "mail",
      "includeLocalAuthentication": true,
      "offerOnlyExisting": false,
      "passwordAttribute": "password",
    },
  },
  "meta": Any<Object>,
  "nodes": {
    "46643303-aeb2-4873-9df1-59db4958cc34": {
      "_id": "46643303-aeb2-4873-9df1-59db4958cc34",
      "_outcomes": [
        {
          "displayName": "known",
          "id": "known",
        },
        {
          "displayName": "unknown",
          "id": "unknown",
        },
      ],
      "_rev": "-99193033",
      "_type": {
        "_id": "ScriptedDecisionNode",
        "collection": true,
        "name": "Scripted Decision",
      },
      "inputs": [
        "*",
      ],
      "outcomes": [
        "known",
        "unknown",
      ],
      "outputs": [
        "*",
      ],
      "script": "739bdc48-fd24-4c52-b353-88706d75558a",
    },
    "4b5d893f-0ade-4385-88d6-a281754fe498": {
      "_id": "4b5d893f-0ade-4385-88d6-a281754fe498",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "-1901002889",
      "_type": {
        "_id": "SocialProviderHandlerNode",
        "collection": true,
        "name": "Social Provider Handler Node",
      },
      "clientType": "BROWSER",
      "script": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "usernameAttribute": "userName",
    },
    "9381fc70-1a31-40de-85de-23faf97e7b28": {
      "_id": "9381fc70-1a31-40de-85de-23faf97e7b28",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "1072614526",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "78164e4b-ac34-46fb-b271-2ae0b1c4dda3",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "eb302165-5014-4538-8baf-8cdce05a50e6",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
      "_id": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "TRUE",
        },
        {
          "displayName": "False",
          "id": "FALSE",
        },
        {
          "displayName": "Locked",
          "id": "LOCKED",
        },
        {
          "displayName": "Cancelled",
          "id": "CANCELLED",
        },
        {
          "displayName": "Expired",
          "id": "EXPIRED",
        },
      ],
      "_rev": "1132424611",
      "_type": {
        "_id": "IdentityStoreDecisionNode",
        "collection": true,
        "name": "Identity Store Decision",
      },
      "minimumPasswordLength": 8,
      "useUniversalIdForUsername": true,
    },
    "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
      "_id": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
      "_outcomes": [
        {
          "displayName": "Social Authentication",
          "id": "socialAuthentication",
        },
        {
          "displayName": "Local Authentication",
          "id": "localAuthentication",
        },
      ],
      "_rev": "-1965514998",
      "_type": {
        "_id": "PageNode",
        "collection": true,
        "name": "Page Node",
      },
      "nodes": [
        {
          "_id": "99f2d026-8d93-492d-b97f-c7331dc31c6d",
          "displayName": "Username",
          "nodeType": "ValidatedUsernameNode",
        },
        {
          "_id": "60ff8a50-6be3-4eb6-a031-387897e7ca9a",
          "displayName": "Password",
          "nodeType": "ValidatedPasswordNode",
        },
        {
          "_id": "e165f3c7-babc-43be-8b3c-e99f1e735908",
          "displayName": "Select IDP",
          "nodeType": "SelectIdPNode",
        },
      ],
      "pageDescription": {},
      "pageHeader": {},
    },
    "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
      "_id": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
      "_outcomes": [
        {
          "displayName": "Email Sent",
          "id": "EMAIL_SENT",
        },
        {
          "displayName": "Email Not Sent",
          "id": "EMAIL_NOT_SENT",
        },
      ],
      "_rev": "-846450844",
      "_type": {
        "_id": "EmailTemplateNode",
        "collection": true,
        "name": "Email Template Node",
      },
      "emailAttribute": "mail",
      "emailTemplateName": "welcome",
      "identityAttribute": "userName",
    },
    "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
      "_id": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
      "_outcomes": [
        {
          "displayName": "Account exists",
          "id": "ACCOUNT_EXISTS",
        },
        {
          "displayName": "No account exists",
          "id": "NO_ACCOUNT",
        },
      ],
      "_rev": "1765887235",
      "_type": {
        "_id": "product-Saml2Node",
        "collection": true,
        "name": "SAML2 Authentication",
      },
      "allowCreate": true,
      "authComparison": "MINIMUM",
      "authnContextClassRef": [],
      "authnContextDeclRef": [],
      "binding": "HTTP_ARTIFACT",
      "forceAuthn": false,
      "idpEntityId": "urn:federation:MicrosoftOnline",
      "isPassive": false,
      "metaAlias": "/alpha/iSPAzure",
      "nameIdFormat": "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
      "requestBinding": "HTTP_REDIRECT",
    },
    "e60801b1-9b6f-4017-83d4-1695ca982022": {
      "_id": "e60801b1-9b6f-4017-83d4-1695ca982022",
      "_outcomes": [
        {
          "displayName": "True",
          "id": "true",
        },
        {
          "displayName": "False",
          "id": "false",
        },
      ],
      "_rev": "1857773376",
      "_type": {
        "_id": "InnerTreeEvaluatorNode",
        "collection": true,
        "name": "Inner Tree Evaluator",
      },
      "tree": "FrodoTestJourney2",
    },
  },
  "saml2Entities": {
    "aVNQQXp1cmU": {
      "_id": "aVNQQXp1cmU",
      "_rev": "1379466460",
      "entityId": "iSPAzure",
      "entityLocation": "hosted",
      "serviceProvider": {
        "advanced": {
          "ecpConfiguration": {
            "ecpRequestIdpListFinderImpl": "com.sun.identity.saml2.plugins.ECPIDPFinder",
          },
          "idpProxy": {},
          "relayStateUrlList": {},
          "saeConfiguration": {
            "spUrl": "https://idc.scheuber.io/am/spsaehandler/metaAlias/alpha/iSPAzure",
          },
        },
        "assertionContent": {
          "assertionTimeSkew": 300,
          "authenticationContext": {
            "authContextItems": [
              {
                "contextReference": "urn:oasis:names:tc:SAML:2.0:ac:classes:PasswordProtectedTransport",
                "defaultItem": true,
                "level": 0,
              },
            ],
            "authenticationComparisonType": "Exact",
            "authenticationContextMapper": "com.sun.identity.saml2.plugins.DefaultSPAuthnContextMapper",
            "includeRequestedAuthenticationContext": true,
          },
          "basicAuthentication": {},
          "nameIdFormat": {
            "nameIdFormatList": [
              "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:WindowsDomainQualifiedName",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:kerberos",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:X509SubjectName",
            ],
          },
          "signingAndEncryption": {
            "encryption": {},
            "requestResponseSigning": {},
            "secretIdAndAlgorithms": {},
          },
        },
        "assertionProcessing": {
          "accountMapping": {
            "spAccountMapper": "com.sun.identity.saml2.plugins.DefaultSPAccountMapper",
            "useNameIDAsSPUserID": true,
          },
          "adapter": {},
          "attributeMapper": {
            "attributeMap": [
              {
                "key": "http://schemas.microsoft.com/identity/claims/displayname",
                "value": "cn",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/givenname",
                "value": "givenName",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/surname",
                "value": "sn",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress",
                "value": "mail",
              },
              {
                "key": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name",
                "value": "uid",
              },
            ],
            "attributeMapper": "com.sun.identity.saml2.plugins.DefaultSPAttributeMapper",
          },
          "autoFederation": {
            "autoFedEnabled": false,
          },
          "responseArtifactMessageEncoding": {
            "encoding": "URI",
          },
          "url": {},
        },
        "services": {
          "metaAlias": "/alpha/iSPAzure",
          "serviceAttributes": {
            "assertionConsumerService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Artifact",
                "index": 0,
                "isDefault": true,
                "location": "https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "index": 1,
                "isDefault": false,
                "location": "https://idc.scheuber.io/am/AuthConsumer/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
                "index": 2,
                "isDefault": false,
                "location": "https://idc.scheuber.io/am/Consumer/ECP/metaAlias/alpha/iSPAzure",
              },
            ],
            "nameIdService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
                "location": "https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniRedirect/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniPOST/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
                "location": "https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPMniSoap/metaAlias/alpha/iSPAzure",
              },
            ],
            "singleLogoutService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-Redirect",
                "location": "https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPSloRedirect/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure",
                "responseLocation": "https://idc.scheuber.io/am/SPSloPOST/metaAlias/alpha/iSPAzure",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:SOAP",
                "location": "https://idc.scheuber.io/am/SPSloSoap/metaAlias/alpha/iSPAzure",
              },
            ],
          },
        },
      },
    },
    "dXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5l": {
      "_id": "dXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5l",
      "_rev": "1971501705",
      "base64EntityXML": "PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiIHN0YW5kYWxvbmU9InllcyI_Pgo8RW50aXR5RGVzY3JpcHRvciBlbnRpdHlJRD0idXJuOmZlZGVyYXRpb246TWljcm9zb2Z0T25saW5lIiBJRD0iX2U0NmExMTkzLWU4YTctNDhlZC04MDRmLTE1MTY3MjllY2I1ZiIgeG1sbnM9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDptZXRhZGF0YSIgeG1sbnM6cXVlcnk9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOm1ldGFkYXRhOmV4dDpxdWVyeSIgeG1sbnM6bWRhdHRyPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTphdHRyaWJ1dGUiIHhtbG5zOnNhbWw9InVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDphc3NlcnRpb24iIHhtbG5zOnhlbmM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDEvMDQveG1sZW5jIyIgeG1sbnM6eGVuYzExPSJodHRwOi8vd3d3LnczLm9yZy8yMDA5L3htbGVuYzExIyIgeG1sbnM6YWxnPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTphbGdzdXBwb3J0IiB4bWxuczp4NTA5cXJ5PSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDptZXRhZGF0YTpYNTA5OnF1ZXJ5IiB4bWxuczpkcz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC8wOS94bWxkc2lnIyI-CiAgICA8RXh0ZW5zaW9ucz4KICAgICAgICA8YWxnOkRpZ2VzdE1ldGhvZCBBbGdvcml0aG09Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvMDkveG1sZHNpZyNzaGExIi8-CiAgICAgICAgPGFsZzpTaWduaW5nTWV0aG9kIEFsZ29yaXRobT0iaHR0cDovL3d3dy53My5vcmcvMjAwMC8wOS94bWxkc2lnI3JzYS1zaGExIi8-CiAgICA8L0V4dGVuc2lvbnM-CiAgICA8U1BTU09EZXNjcmlwdG9yIFdhbnRBc3NlcnRpb25zU2lnbmVkPSJ0cnVlIiBwcm90b2NvbFN1cHBvcnRFbnVtZXJhdGlvbj0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOnByb3RvY29sIj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRYmdESGZpM3QxSk5HVnF3RDUvN2xtakFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpBeE1qSXhNREF3TURBd1doY05NalV4TWpJeApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFERlQwLzAvMnFRdXJuWWEwTGJKSEY5WVlvemhFSDZyOW1DeFZEQlliZXcKU0c0dEdncldwc2V3US85NnBjY3pHTVFjdE12VStoMmVYMzhIeC9mOUpBSURidVJRelFsc1BoUVM3RERaNldsVFhVK3Q4ZC9nMkM3ZgpwU29MczRLVmRKaWg0eHlqTFVXaitCSy9panNSakJ0NFJpdzlWYkpIL0RkV0t5b1NNYkVDRWlFK3MxUnRMUC9lWW9NbU5meHlRR3FXCmlyQ05xVk5CVGxxellRcDRkZ0YwZm9ZeTRrdG94d21RT1ZvVGNJTUZZcDFJNHBGUEk3Q3h1TUxrZkswWDdhVGJNN1lHcGh2TWZKeEoKa2pyUWR5STdHNWQxdDRETmkzemtFYkJUN0ZHQXI2cVB0M0tuOXJhbHBxSktIZHBFQkE5TjB2TndRbzVYVFlJaFViUFExNklSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCUnM3dFBtZmtrc1NyNjdLdEVsSGpZWmJlYUNUakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCkpxd01aU2pRSjM2eCsxc3R5NkVlTEtRTFFld1F3UGFFQzQ3WnV0KzhiWGVkNlE4ak1aMGJmYS9NTTdYcXVFY2FiYU1aTFF1S0xmdDQKNFlYd1hYUU9mUXJJMnFqUXIzZVRvSkZsRFQ5aFIwcmZwOXdRcXR0RHhkNkFhNlJXd0RUZ281b0tVUUNUS0xIaEV5OHVXelNjSzBlRwp0MmQ3VFdUYURYalJTd05xNnRNN2ZSaFpzMDd0S0JWM3hmaTlFUXkvbWxhdkFNRlJCVm04Nk5TbzdBc09HMUlPTXEwM1Uzb29DV0FYCmg5UGR2dkhOZkhoSDE5ZnV0QW5DL0hlT2p3UkYxUWM1MjdhQk1waFlGUUxkaVRoZm1mbWlFL0FoUXFDd1oyb0U3dUNKaEJ0UitLYjEKWkdoakkzNXBIZnNTcUdpRmE3S3IrNWF2ZTgyMlBEY2tlODlNdmc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRTi9HUGVnblQ4YmxQMkVjU2RNTWJCekFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpFd01qRTRNREF3TURBd1doY05Nall3TWpFNApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWGRMR1UyTGw1UlBkRFVuS1ErZi9IUzVxaVRheTJjQ2g5VTJBUzZvRE0KNlNPeFZoWUd0b2VKMVZQZWJjTG5wZ0xmaFB4enJ3V29WelhTRUYrVlJRYm5ZSUQySmI0a2hqZ3lFZW9UaGszVnFyVGh3aGFocFNiQgpnMnZvMDZ2SU9wMVRTMlIxQml3SEtUTG9CMWkxSUpuYUlGU0MzQk42cFk0ZmxYV3lMUXQvNUFCWEVsdjJYWkxxWE05RWVmajZKaTQwCm5MSXNpVzRkV3czQkRhL3l3V1cwTXNpVzVvakdxNHZvdmNBZ0VOZS80TlVianU3MGdIUC9XUzVEOWJXNXArT0lRaTcvdW5ybFdlL2gKM0E2anRCYmJSbFhZWGxOK1oyMnVUVHl5Q0QvVzh6ZVhhQUNMdkhhZ3dFTXJRZVBEWEJacWMvaVgya0krb29acjFzQy9IMzlSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCU3JYMmRtM0x3VDlqYi9wK2JBQWRZUXBFKy9OakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCmVxSmZZSG5zQTlxaEd0dFhGZkZwUFc0RFFMaDV3NkpDY2U3dkd2V0lOcjVmcjFEblFkY09yK3d3alEvdHFiY2tBTDJ2NnoxQXFqaFMKNzhrYmZlZ25BUUR3aW9KWjFvbFlZdkxPeEtvYTZIRitiMS9wME1sdWI4WnVrazJuMWIybEtQQkJPaWJPYXNTWTdnUUR3bElaaTd0bAo5bk1UeFVmZFlLK0U1QXh2N0RWbm1VQ3djbm5wVjUvMVNGZE55VzJrV080QzY4cnJqTU92RUNmd3JLa2JmVkpNOGY5a3JFVUJ1b0JGCjhkVER2N0QyWk00UTJidUM3ME5iZmFOV1VYMHlGdktJMEl1VHFrOFJCZkdUUlE0ZlpBYmhNUGF5a0VwQnU2ZE5qVGk1WU9hMGxOcUYKR1M3QXg3bGVDaDV4OWxWOGVsY0xrWHM4eVNvOEFPUUprMGhnSXc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8S2V5RGVzY3JpcHRvciB1c2U9InNpZ25pbmciPgogICAgICAgICAgICA8ZHM6S2V5SW5mbz4KICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgCiAgICAgICAgICAgICAgICAKICAgICAgICAgICAgICAgIAogICAgICAgICAgICAgICAgPGRzOlg1MDlEYXRhPgogICAgICAgICAgICAgICAgICAgIDxkczpYNTA5Q2VydGlmaWNhdGU-Ck1JSUMvVENDQWVXZ0F3SUJBZ0lRTi9HUGVnblQ4YmxQMkVjU2RNTWJCekFOQmdrcWhraUc5dzBCQVFzRkFEQXBNU2N3SlFZRFZRUUQKRXg1TWFYWmxJRWxFSUZOVVV5QlRhV2R1YVc1bklGQjFZbXhwWXlCTFpYa3dIaGNOTWpFd01qRTRNREF3TURBd1doY05Nall3TWpFNApNREF3TURBd1dqQXBNU2N3SlFZRFZRUURFeDVNYVhabElFbEVJRk5VVXlCVGFXZHVhVzVuSUZCMVlteHBZeUJMWlhrd2dnRWlNQTBHCkNTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEWGRMR1UyTGw1UlBkRFVuS1ErZi9IUzVxaVRheTJjQ2g5VTJBUzZvRE0KNlNPeFZoWUd0b2VKMVZQZWJjTG5wZ0xmaFB4enJ3V29WelhTRUYrVlJRYm5ZSUQySmI0a2hqZ3lFZW9UaGszVnFyVGh3aGFocFNiQgpnMnZvMDZ2SU9wMVRTMlIxQml3SEtUTG9CMWkxSUpuYUlGU0MzQk42cFk0ZmxYV3lMUXQvNUFCWEVsdjJYWkxxWE05RWVmajZKaTQwCm5MSXNpVzRkV3czQkRhL3l3V1cwTXNpVzVvakdxNHZvdmNBZ0VOZS80TlVianU3MGdIUC9XUzVEOWJXNXArT0lRaTcvdW5ybFdlL2gKM0E2anRCYmJSbFhZWGxOK1oyMnVUVHl5Q0QvVzh6ZVhhQUNMdkhhZ3dFTXJRZVBEWEJacWMvaVgya0krb29acjFzQy9IMzlSQWdNQgpBQUdqSVRBZk1CMEdBMVVkRGdRV0JCU3JYMmRtM0x3VDlqYi9wK2JBQWRZUXBFKy9OakFOQmdrcWhraUc5dzBCQVFzRkFBT0NBUUVBCmVxSmZZSG5zQTlxaEd0dFhGZkZwUFc0RFFMaDV3NkpDY2U3dkd2V0lOcjVmcjFEblFkY09yK3d3alEvdHFiY2tBTDJ2NnoxQXFqaFMKNzhrYmZlZ25BUUR3aW9KWjFvbFlZdkxPeEtvYTZIRitiMS9wME1sdWI4WnVrazJuMWIybEtQQkJPaWJPYXNTWTdnUUR3bElaaTd0bAo5bk1UeFVmZFlLK0U1QXh2N0RWbm1VQ3djbm5wVjUvMVNGZE55VzJrV080QzY4cnJqTU92RUNmd3JLa2JmVkpNOGY5a3JFVUJ1b0JGCjhkVER2N0QyWk00UTJidUM3ME5iZmFOV1VYMHlGdktJMEl1VHFrOFJCZkdUUlE0ZlpBYmhNUGF5a0VwQnU2ZE5qVGk1WU9hMGxOcUYKR1M3QXg3bGVDaDV4OWxWOGVsY0xrWHM4eVNvOEFPUUprMGhnSXc9PQogICAgICAgICAgICAgICAgICAgIDwvZHM6WDUwOUNlcnRpZmljYXRlPgogICAgICAgICAgICAgICAgPC9kczpYNTA5RGF0YT4KICAgICAgICAgICAgPC9kczpLZXlJbmZvPgogICAgICAgIDwvS2V5RGVzY3JpcHRvcj4KICAgICAgICA8U2luZ2xlTG9nb3V0U2VydmljZSBCaW5kaW5nPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDoyLjA6YmluZGluZ3M6SFRUUC1QT1NUIiBMb2NhdGlvbj0iaHR0cHM6Ly9sb2dpbi5taWNyb3NvZnRvbmxpbmUuY29tL2xvZ2luLnNyZiIvPgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6MS4xOm5hbWVpZC1mb3JtYXQ6ZW1haWxBZGRyZXNzPC9OYW1lSURGb3JtYXQ-CiAgICAgICAgPE5hbWVJREZvcm1hdD51cm46bWFjZTpzaGliYm9sZXRoOjEuMDpuYW1lSWRlbnRpZmllcjwvTmFtZUlERm9ybWF0PgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6MS4xOm5hbWVpZC1mb3JtYXQ6dW5zcGVjaWZpZWQ8L05hbWVJREZvcm1hdD4KICAgICAgICA8TmFtZUlERm9ybWF0PnVybjpvYXNpczpuYW1lczp0YzpTQU1MOjIuMDpuYW1laWQtZm9ybWF0OnRyYW5zaWVudDwvTmFtZUlERm9ybWF0PgogICAgICAgIDxOYW1lSURGb3JtYXQ-dXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOm5hbWVpZC1mb3JtYXQ6cGVyc2lzdGVudDwvTmFtZUlERm9ybWF0PgogICAgICAgIDxBc3NlcnRpb25Db25zdW1lclNlcnZpY2UgaW5kZXg9IjAiIGlzRGVmYXVsdD0idHJ1ZSIgQmluZGluZz0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOmJpbmRpbmdzOkhUVFAtUE9TVCIgTG9jYXRpb249Imh0dHBzOi8vbG9naW4ubWljcm9zb2Z0b25saW5lLmNvbS9sb2dpbi5zcmYiLz4KICAgICAgICA8QXNzZXJ0aW9uQ29uc3VtZXJTZXJ2aWNlIGluZGV4PSIxIiBpc0RlZmF1bHQ9ImZhbHNlIiBCaW5kaW5nPSJ1cm46b2FzaXM6bmFtZXM6dGM6U0FNTDoyLjA6YmluZGluZ3M6SFRUUC1QT1NULVNpbXBsZVNpZ24iIExvY2F0aW9uPSJodHRwczovL2xvZ2luLm1pY3Jvc29mdG9ubGluZS5jb20vbG9naW4uc3JmIi8-CiAgICAgICAgPEFzc2VydGlvbkNvbnN1bWVyU2VydmljZSBpbmRleD0iMiIgaXNEZWZhdWx0PSJmYWxzZSIgQmluZGluZz0idXJuOm9hc2lzOm5hbWVzOnRjOlNBTUw6Mi4wOmJpbmRpbmdzOlBBT1MiIExvY2F0aW9uPSJodHRwczovL2xvZ2luLm1pY3Jvc29mdG9ubGluZS5jb20vbG9naW4uc3JmIi8-CiAgICA8L1NQU1NPRGVzY3JpcHRvcj4KPC9FbnRpdHlEZXNjcmlwdG9yPgoK",
      "entityId": "urn:federation:MicrosoftOnline",
      "entityLocation": "remote",
      "serviceProvider": {
        "advanced": {
          "idpProxy": {},
          "saeConfiguration": {},
        },
        "assertionContent": {
          "basicAuthentication": {},
          "nameIdFormat": {
            "nameIdFormatList": [
              "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress",
              "urn:mace:shibboleth:1.0:nameIdentifier",
              "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:transient",
              "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent",
            ],
          },
          "signingAndEncryption": {
            "encryption": {},
            "requestResponseSigning": {
              "assertion": true,
            },
          },
        },
        "assertionProcessing": {
          "attributeMapper": {
            "attributeMap": [
              {
                "binary": false,
                "localAttribute": "mail",
                "samlAttribute": "IDPEmail",
              },
              {
                "binary": false,
                "localAttribute": "UOPClassID",
                "samlAttribute": "UOPClassID",
              },
            ],
          },
          "responseArtifactMessageEncoding": {
            "encoding": "URI",
          },
        },
        "services": {
          "serviceAttributes": {
            "assertionConsumerService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "index": 0,
                "isDefault": true,
                "location": "https://login.microsoftonline.com/login.srf",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST-SimpleSign",
                "index": 1,
                "isDefault": false,
                "location": "https://login.microsoftonline.com/login.srf",
              },
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:PAOS",
                "index": 2,
                "isDefault": false,
                "location": "https://login.microsoftonline.com/login.srf",
              },
            ],
            "singleLogoutService": [
              {
                "binding": "urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST",
                "location": "https://login.microsoftonline.com/login.srf",
              },
            ],
          },
        },
      },
    },
  },
  "scripts": {
    "23143919-6b78-40c3-b25e-beca19b229e0": {
      "_id": "23143919-6b78-40c3-b25e-beca19b229e0",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Normalizes raw profile data from GitHub",
      "language": "GROOVY",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "GitHub Profile Normalization (VS)",
      "script": ""/*\\n * Copyright 2020 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS.\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\nimport static org.forgerock.json.JsonValue.field\\nimport static org.forgerock.json.JsonValue.json\\nimport static org.forgerock.json.JsonValue.object\\n\\nlogger.warning(\\"GitHub rawProfile: \\"+rawProfile)\\n\\nreturn json(object(\\n        field(\\"id\\", rawProfile.id),\\n        field(\\"displayName\\", rawProfile.name),\\n        field(\\"givenName\\", rawProfile.first_name),\\n        field(\\"familyName\\", rawProfile.last_name),\\n        field(\\"photoUrl\\", rawProfile.picture.data.url),\\n        field(\\"email\\", rawProfile.email),\\n        field(\\"username\\", rawProfile.email)))"",
    },
    "58c824ae-84ed-4724-82cd-db128fc3f6c": {
      "_id": "58c824ae-84ed-4724-82cd-db128fc3f6c",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": true,
      "description": "Converts a normalized social profile into a managed user",
      "language": "GROOVY",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "Normalized Profile to Managed User",
      "script": ""/*\\n * Copyright 2020 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS.\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\nimport static org.forgerock.json.JsonValue.field\\nimport static org.forgerock.json.JsonValue.json\\nimport static org.forgerock.json.JsonValue.object\\n\\nimport org.forgerock.json.JsonValue\\n\\nJsonValue managedUser = json(object(\\n        field(\\"givenName\\", normalizedProfile.givenName),\\n        field(\\"sn\\", normalizedProfile.familyName),\\n        field(\\"mail\\", normalizedProfile.email),\\n        field(\\"userName\\", normalizedProfile.username)))\\n\\nif (normalizedProfile.postalAddress.isNotNull()) managedUser.put(\\"postalAddress\\", normalizedProfile.postalAddress)\\nif (normalizedProfile.addressLocality.isNotNull()) managedUser.put(\\"city\\", normalizedProfile.addressLocality)\\nif (normalizedProfile.addressRegion.isNotNull()) managedUser.put(\\"stateProvince\\", normalizedProfile.addressRegion)\\nif (normalizedProfile.postalCode.isNotNull()) managedUser.put(\\"postalCode\\", normalizedProfile.postalCode)\\nif (normalizedProfile.country.isNotNull()) managedUser.put(\\"country\\", normalizedProfile.country)\\nif (normalizedProfile.phone.isNotNull()) managedUser.put(\\"telephoneNumber\\", normalizedProfile.phone)\\n\\n// if the givenName and familyName is null or empty\\n// then add a boolean flag to the shared state to indicate names are not present\\n// this could be used elsewhere\\n// for eg. this could be used in a scripted decision node to by-pass patching\\n// the user object with blank values when givenName  and familyName is not present\\nboolean noGivenName = normalizedProfile.givenName.isNull() || (!normalizedProfile.givenName.asString()?.trim())\\nboolean noFamilyName = normalizedProfile.familyName.isNull() || (!normalizedProfile.familyName.asString()?.trim())\\nsharedState.put(\\"nameEmptyOrNull\\", noGivenName && noFamilyName)\\n\\nreturn managedUser\\n"",
    },
    "739bdc48-fd24-4c52-b353-88706d75558a": {
      "_id": "739bdc48-fd24-4c52-b353-88706d75558a",
      "context": "AUTHENTICATION_TREE_DECISION_NODE",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Check if username has already been collected.",
      "language": "JAVASCRIPT",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "Check Username",
      "script": ""/* Check Username\\n *\\n * Author: volker.scheuber@forgerock.com\\n * \\n * Check if username has already been collected.\\n * Return \\"known\\" if yes, \\"unknown\\" otherwise.\\n * \\n * This script does not need to be parametrized. It will work properly as is.\\n * \\n * The Scripted Decision Node needs the following outcomes defined:\\n * - known\\n * - unknown\\n */\\n(function () {\\n    if (null != sharedState.get(\\"username\\")) {\\n        outcome = \\"known\\";\\n    }\\n    else {\\n        outcome = \\"unknown\\";\\n    }\\n}());"",
    },
    "dbe0bf9a-72aa-49d5-8483-9db147985a47": {
      "_id": "dbe0bf9a-72aa-49d5-8483-9db147985a47",
      "context": "SOCIAL_IDP_PROFILE_TRANSFORMATION",
      "createdBy": "null",
      "creationDate": 0,
      "default": false,
      "description": "Normalizes raw profile data from ADFS",
      "language": "JAVASCRIPT",
      "lastModifiedBy": "null",
      "lastModifiedDate": 0,
      "name": "ADFS Profile Normalization (JS)",
      "script": ""/*\\n * Copyright 2022 ForgeRock AS. All Rights Reserved\\n *\\n * Use of this code requires a commercial software license with ForgeRock AS\\n * or with one of its affiliates. All use shall be exclusively subject\\n * to such license between the licensee and ForgeRock AS.\\n */\\n\\n/*\\n * This script returns the social identity profile information for the authenticating user\\n * in a standard form expected by the Social Provider Handler Node.\\n *\\n * Defined variables:\\n * rawProfile - The social identity provider profile information for the authenticating user.\\n *              JsonValue (1).\\n * logger - The debug logger instance:\\n *          https://backstage.forgerock.com/docs/am/7/scripting-guide/scripting-api-global-logger.html#scripting-api-global-logger.\\n * realm - String (primitive).\\n *         The name of the realm the user is authenticating to.\\n * requestHeaders - TreeMap (2).\\n *                  The object that provides methods for accessing headers in the login request:\\n *                  https://backstage.forgerock.com/docs/am/7/authentication-guide/scripting-api-node.html#scripting-api-node-requestHeaders.\\n * requestParameters - TreeMap (2).\\n *                     The object that contains the authentication request parameters.\\n * selectedIdp - String (primitive).\\n *               The social identity provider name. For example: google.\\n * sharedState - LinkedHashMap (3).\\n *               The object that holds the state of the authentication tree and allows data exchange between the stateless nodes:\\n *               https://backstage.forgerock.com/docs/am/7/auth-nodes/core-action.html#accessing-tree-state.\\n * transientState - LinkedHashMap (3).\\n *                  The object for storing sensitive information that must not leave the server unencrypted,\\n *                  and that may not need to persist between authentication requests during the authentication session:\\n *                  https://backstage.forgerock.com/docs/am/7/auth-nodes/core-action.html#accessing-tree-state.\\n *\\n * Return - a JsonValue (1).\\n *          The result of the last statement in the script is returned to the server.\\n *          Currently, the Immediately Invoked Function Expression (also known as Self-Executing Anonymous Function)\\n *          is the last (and only) statement in this script, and its return value will become the script result.\\n *          Do not use \\"return variable\\" statement outside of a function definition.\\n *\\n *          This script's last statement should result in a JsonValue (1) with the following keys:\\n *          {\\n *              {\\"displayName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"email\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"familyName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"givenName\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"id\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"locale\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"photoUrl\\": \\"corresponding-social-identity-provider-value\\"},\\n *              {\\"username\\": \\"corresponding-social-identity-provider-value\\"}\\n *          }\\n *\\n *          The consumer of this data defines which keys are required and which are optional.\\n *          For example, the script associated with the Social Provider Handler Node and,\\n *          ultimately, the managed object created/updated with this data\\n *          will expect certain keys to be populated.\\n *          In some common default configurations, the following keys are required to be not empty:\\n *          username, givenName, familyName, email.\\n *\\n *          From RFC4517: A value of the Directory String syntax is a string of one or more\\n *          arbitrary characters from the Universal Character Set (UCS).\\n *          A zero-length character string is not permitted.\\n *\\n * (1) JsonValue - https://backstage.forgerock.com/docs/am/7/apidocs/org/forgerock/json/JsonValue.html.\\n * (2) TreeMap - https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/TreeMap.html.\\n * (3) LinkedHashMap - https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/util/LinkedHashMap.html.\\n */\\n\\n(function () {\\n    var frJava = JavaImporter(\\n        org.forgerock.json.JsonValue\\n    );\\n\\n    var normalizedProfileData = frJava.JsonValue.json(frJava.JsonValue.object());\\n  \\n  \\t//logger.message('Seguin rawProfile: '+rawProfile);\\n\\n    normalizedProfileData.put('id', rawProfile.get('sub').asString());\\n    normalizedProfileData.put('displayName', rawProfile.get('givenName').asString() + ' ' + rawProfile.get('sn').asString());\\n    normalizedProfileData.put('email', rawProfile.get('mail').asString());\\n    normalizedProfileData.put('givenName', rawProfile.get('givenName').asString());\\n    normalizedProfileData.put('familyName', rawProfile.get('sn').asString());\\n    normalizedProfileData.put('username', rawProfile.get('upn').asString());\\n    normalizedProfileData.put('roles', rawProfile.get('roles').asString());\\n  \\n  \\t//logger.message('Seguin normalizedProfileData: '+normalizedProfileData);\\n\\n    return normalizedProfileData;\\n}());"",
    },
  },
  "socialIdentityProviders": {
    "adfs": {
      "_id": "adfs",
      "_type": {
        "_id": "oidcConfig",
        "collection": true,
        "name": "Client configuration for providers that implement the OpenID Connect specification.",
      },
      "acrValues": [],
      "authenticationIdKey": "sub",
      "authorizationEndpoint": "https://adfs.mytestrun.com/adfs/oauth2/authorize",
      "clientAuthenticationMethod": "CLIENT_SECRET_POST",
      "clientId": "aa9a179e-cdba-4db8-8477-3d1069d5ec04",
      "enableNativeNonce": true,
      "enabled": true,
      "encryptJwtRequestParameter": false,
      "encryptedIdTokens": false,
      "issuer": "https://adfs.mytestrun.com/adfs",
      "issuerComparisonCheckType": "EXACT",
      "jwksUriEndpoint": "https://adfs.mytestrun.com/adfs/discovery/keys",
      "jwtEncryptionAlgorithm": "NONE",
      "jwtEncryptionMethod": "NONE",
      "jwtRequestParameterOption": "NONE",
      "jwtSigningAlgorithm": "RS256",
      "pkceMethod": "S256",
      "privateKeyJwtExpTime": 600,
      "redirectURI": "https://idc.scheuber.io/login",
      "responseMode": "DEFAULT",
      "revocationCheckOptions": [],
      "scopeDelimiter": " ",
      "scopes": [
        "openid",
        "profile",
        "email",
      ],
      "tokenEndpoint": "https://adfs.mytestrun.com/adfs/oauth2/token",
      "transform": "dbe0bf9a-72aa-49d5-8483-9db147985a47",
      "uiConfig": {
        "buttonClass": "",
        "buttonCustomStyle": "background-color: #fff; border-color: #8b8b8b; color: #8b8b8b;",
        "buttonCustomStyleHover": "background-color: #fff; border-color: #8b8b8b; color: #8b8b8b;",
        "buttonDisplayName": "Microsoft ADFS",
        "buttonImage": "/login/images/microsoft-logo.png",
        "iconBackground": "#0078d7",
        "iconClass": "fa-windows",
        "iconFontColor": "white",
      },
      "useCustomTrustStore": false,
      "userInfoResponseType": "JSON",
      "wellKnownEndpoint": "https://adfs.mytestrun.com/adfs/.well-known/openid-configuration",
    },
    "github": {
      "_id": "github",
      "_type": {
        "_id": "oauth2Config",
        "collection": true,
        "name": "Client configuration for providers that implement the OAuth2 specification.",
      },
      "authenticationIdKey": "id",
      "authorizationEndpoint": "https://github.com/login/oauth/authorize",
      "clientAuthenticationMethod": "CLIENT_SECRET_POST",
      "clientId": "bdae6d141d4dcf95a630",
      "enabled": true,
      "issuerComparisonCheckType": "EXACT",
      "jwtEncryptionAlgorithm": "NONE",
      "jwtEncryptionMethod": "NONE",
      "jwtSigningAlgorithm": "NONE",
      "pkceMethod": "S256",
      "privateKeyJwtExpTime": 600,
      "redirectURI": "https://idc.scheuber.io/login",
      "responseMode": "DEFAULT",
      "revocationCheckOptions": [],
      "scopeDelimiter": " ",
      "scopes": [
        "user",
      ],
      "tokenEndpoint": "https://ig.mytestrun.com/login/oauth/access_token",
      "transform": "23143919-6b78-40c3-b25e-beca19b229e0",
      "uiConfig": {
        "buttonCustomStyle": "background-color: #fff; color: #757575; border-color: #ddd;",
        "buttonCustomStyleHover": "color: #6d6d6d; background-color: #eee; border-color: #ccc;",
        "buttonDisplayName": "GitHub",
        "buttonImage": "https://cdn-icons-png.flaticon.com/512/25/25231.png",
        "iconBackground": "#4184f3",
        "iconFontColor": "white",
      },
      "useCustomTrustStore": false,
      "userInfoEndpoint": "https://ig.mytestrun.com/user",
    },
  },
  "themes": [],
  "tree": {
    "_id": "FrodoTestJourney3",
    "_rev": "1422551525",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
}
`;

exports[`JourneyOps getJourneys() 1: Get all journeys 1`] = `
[
  {
    "_id": "ConnectSocial",
    "_rev": "702765164",
    "description": "Connect Social IDP Tree",
    "enabled": true,
    "entryNodeId": "70f10655-df28-4f93-ac69-60133f6d9662",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "255386e3-945b-4a01-911e-9bacb5660c32": {
        "connections": {
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "PATCHED": "539dfd7f-89fe-4d94-bcc0-6e98302192bf",
        },
        "displayName": "Patch Object",
        "nodeType": "PatchObjectNode",
        "x": 821,
        "y": 336.76666259765625,
      },
      "4befd239-9bf0-4e35-8702-0d9709dca076": {
        "connections": {
          "ACCOUNT_EXISTS": "539dfd7f-89fe-4d94-bcc0-6e98302192bf",
          "NO_ACCOUNT": "b0c3ce9e-21ae-4845-adb7-6626a2093cb4",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 458,
        "y": 75,
      },
      "539dfd7f-89fe-4d94-bcc0-6e98302192bf": {
        "connections": {
          "outcome": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Increment Login Count",
        "nodeType": "IncrementLoginCountNode",
        "x": 987,
        "y": 106,
      },
      "70f10655-df28-4f93-ac69-60133f6d9662": {
        "connections": {
          "outcome": "837f8c63-5ca1-4227-9809-2699a45d77fc",
        },
        "displayName": "Get Session Data",
        "nodeType": "SessionDataNode",
        "x": 97,
        "y": 110.76666259765625,
      },
      "837f8c63-5ca1-4227-9809-2699a45d77fc": {
        "connections": {
          "socialAuthentication": "4befd239-9bf0-4e35-8702-0d9709dca076",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 267,
        "y": 213,
      },
      "b0c3ce9e-21ae-4845-adb7-6626a2093cb4": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "255386e3-945b-4a01-911e-9bacb5660c32",
        },
        "displayName": "Find User",
        "nodeType": "IdentifyExistingUserNode",
        "x": 621,
        "y": 205.76666259765625,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1238,
        "y": 98,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1238,
        "y": 256,
      },
      "startNode": {
        "x": 50,
        "y": 25,
      },
    },
    "uiConfig": {
      "categories": "["Self-Service"]",
    },
  },
  {
    "_id": "ForgottenUsername",
    "_rev": "906006051",
    "description": "Forgotten Username Tree",
    "enabled": true,
    "entryNodeId": "154bbf72-7928-4541-9e81-e6a42b7cd5ce",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "154bbf72-7928-4541-9e81-e6a42b7cd5ce": {
        "connections": {
          "outcome": "c06aa309-4a0b-49e2-a3a9-bc13de0f87d1",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 139,
        "y": 146,
      },
      "40e67f58-e027-4588-80dc-72c728ca1646": {
        "connections": {
          "outcome": "d50c645e-e980-407e-b79e-870cb099f123",
        },
        "displayName": "Email Suspend Node",
        "nodeType": "EmailSuspendNode",
        "x": 563,
        "y": 193,
      },
      "c06aa309-4a0b-49e2-a3a9-bc13de0f87d1": {
        "connections": {
          "false": "40e67f58-e027-4588-80dc-72c728ca1646",
          "true": "40e67f58-e027-4588-80dc-72c728ca1646",
        },
        "displayName": "Identify Existing User",
        "nodeType": "IdentifyExistingUserNode",
        "x": 324,
        "y": 152,
      },
      "d50c645e-e980-407e-b79e-870cb099f123": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Inner Tree Evaluator",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 767,
        "y": 188,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 970,
        "y": 149,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 982,
        "y": 252,
      },
      "startNode": {
        "x": 50,
        "y": 25,
      },
    },
    "uiConfig": {
      "categories": "["Self-Service"]",
    },
  },
  {
    "_id": "FrodoTestJourney1",
    "_rev": "781670037",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "cc4b5c15-4af6-4a94-b0c6-fc6f31895b4f",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "1c586352-4568-4918-8985-876f142d1427": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "cc4b5c15-4af6-4a94-b0c6-fc6f31895b4f": {
        "connections": {
          "outcome": "1c586352-4568-4918-8985-876f142d1427",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney2",
    "_rev": "1682367743",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "e3bc0d65-9f4d-4ca3-aa44-69fee11753a1",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "e3bc0d65-9f4d-4ca3-aa44-69fee11753a1": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 210,
        "y": 137.5,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 440,
        "y": 80,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 440,
        "y": 230,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney3",
    "_rev": "1422551525",
    "description": "Frodo test journey utilizing a variety of nodes and dependencies to test support for complex journeys.",
    "enabled": true,
    "entryNodeId": "46643303-aeb2-4873-9df1-59db4958cc34",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "46643303-aeb2-4873-9df1-59db4958cc34": {
        "connections": {
          "known": "9381fc70-1a31-40de-85de-23faf97e7b28",
          "unknown": "ab9f607b-0f87-4e46-972d-fa726cd1c8f0",
        },
        "displayName": "Check Username",
        "nodeType": "ScriptedDecisionNode",
        "x": 210,
        "y": 305.5,
      },
      "4b5d893f-0ade-4385-88d6-a281754fe498": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 685,
        "y": 371.8333333333333,
      },
      "9381fc70-1a31-40de-85de-23faf97e7b28": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 424,
      },
      "a681751d-ab8c-4cb8-8be9-92b4cc688b69": {
        "connections": {
          "CANCELLED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "EXPIRED": "e60801b1-9b6f-4017-83d4-1695ca982022",
          "FALSE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "LOCKED": "e301438c-0bd0-429c-ab0c-66126501069a",
          "TRUE": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Creds",
        "nodeType": "IdentityStoreDecisionNode",
        "x": 685,
        "y": 143.66666666666666,
      },
      "ab9f607b-0f87-4e46-972d-fa726cd1c8f0": {
        "connections": {
          "localAuthentication": "a681751d-ab8c-4cb8-8be9-92b4cc688b69",
          "socialAuthentication": "4b5d893f-0ade-4385-88d6-a281754fe498",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 440,
        "y": 80,
      },
      "c3167e4f-4756-4ad2-bbbd-1278fc1dbf59": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "dd0d8532-e7a2-40af-b05f-2913432fc97e",
        },
        "displayName": "Email Template Node",
        "nodeType": "EmailTemplateNode",
        "x": 915,
        "y": 309.3333333333333,
      },
      "dd0d8532-e7a2-40af-b05f-2913432fc97e": {
        "connections": {
          "ACCOUNT_EXISTS": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "NO_ACCOUNT": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "SAML2 Authentication",
        "nodeType": "product-Saml2Node",
        "x": 1163,
        "y": 305.5,
      },
      "e60801b1-9b6f-4017-83d4-1695ca982022": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Login",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 915,
        "y": 168.66666666666669,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1417,
        "y": 192,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1417,
        "y": 286,
      },
      "startNode": {
        "x": 70,
        "y": 323,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney6",
    "_rev": "-532542814",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "a2fda63a-859d-44c0-ba5e-ac0bd5d82040",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "20dde5d1-fe72-473a-b811-c16fe753fef5": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "a2fda63a-859d-44c0-ba5e-ac0bd5d82040": {
        "connections": {
          "outcome": "20dde5d1-fe72-473a-b811-c16fe753fef5",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney7",
    "_rev": "753396247",
    "description": "Frodo test journey",
    "enabled": true,
    "entryNodeId": "d6171ae2-903d-41cc-b851-af6414e56d56",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "a9adc345-4fef-4d86-831a-9d8bc952f844": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "d6171ae2-903d-41cc-b851-af6414e56d56": {
        "connections": {
          "outcome": "a9adc345-4fef-4d86-831a-9d8bc952f844",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney8",
    "_rev": "-1342780544",
    "description": "Frodo test journey",
    "enabled": false,
    "entryNodeId": "b20da99f-e162-4b03-be45-13379995867f",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "277c21a5-1474-45f9-aa8c-b39eaffc1b2b": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
      "b20da99f-e162-4b03-be45-13379995867f": {
        "connections": {
          "outcome": "277c21a5-1474-45f9-aa8c-b39eaffc1b2b",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "FrodoTestJourney9",
    "_rev": "352270679",
    "description": "Frodo test journey",
    "enabled": false,
    "entryNodeId": "82d90fa0-9345-46b5-b5b1-50f732a387ec",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "82d90fa0-9345-46b5-b5b1-50f732a387ec": {
        "connections": {
          "outcome": "f07fba3c-b2fb-4298-94c7-c3379132ef74",
        },
        "displayName": "Login Page",
        "nodeType": "PageNode",
        "x": 210,
        "y": 109,
      },
      "f07fba3c-b2fb-4298-94c7-c3379132ef74": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Validate Credentials",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 137.5,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 692,
        "y": 230,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 692,
        "y": 80,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {
      "categories": "["Frodo","Prototype"]",
    },
  },
  {
    "_id": "Login",
    "_rev": "-66753626",
    "description": "Platform Login Tree",
    "enabled": true,
    "entryNodeId": "2b47d18d-b3c6-4885-831b-15416d6e4152",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "12df19c3-3a89-4761-be1c-9c7304f1cf7f": {
        "connections": {
          "false": "756ec76a-f266-4fd8-98ed-df37ed692337",
          "true": "756ec76a-f266-4fd8-98ed-df37ed692337",
        },
        "displayName": "Progressive Profile",
        "nodeType": "InnerTreeEvaluatorNode",
        "x": 685,
        "y": 80,
      },
      "1d8e0b33-34fb-4e83-af82-eef928d85d7b": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "12df19c3-3a89-4761-be1c-9c7304f1cf7f",
        },
        "displayName": "U/P Login",
        "nodeType": "DataStoreDecisionNode",
        "x": 455,
        "y": 155,
      },
      "2b47d18d-b3c6-4885-831b-15416d6e4152": {
        "connections": {
          "outcome": "1d8e0b33-34fb-4e83-af82-eef928d85d7b",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 210,
        "y": 126.5,
      },
      "756ec76a-f266-4fd8-98ed-df37ed692337": {
        "connections": {
          "outcome": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Count Login",
        "nodeType": "IncrementLoginCountNode",
        "x": 915,
        "y": 180,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1145,
        "y": 172.5,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 685,
        "y": 265,
      },
      "startNode": {
        "x": 70,
        "y": 172.5,
      },
    },
    "uiConfig": {
      "categories": "["Authentication","Social Authentication"]",
    },
  },
  {
    "_id": "ProgressiveProfile",
    "_rev": "-939173418",
    "description": "Prompt for missing preferences on 3rd login",
    "enabled": true,
    "entryNodeId": "68b4eb4d-a7bb-4ed6-8952-606c770e2fcc",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "1231e2b4-7f5c-4ae5-8bf9-574be4e330be": {
        "connections": {
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "PATCHED": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Update Account",
        "nodeType": "PatchObjectNode",
        "x": 611,
        "y": 357,
      },
      "68b4eb4d-a7bb-4ed6-8952-606c770e2fcc": {
        "connections": {
          "false": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
          "true": "6fec099f-5d71-4201-8d2b-6d021a941965",
        },
        "displayName": "Login Count",
        "nodeType": "LoginCountDecisionNode",
        "x": 142,
        "y": 216,
      },
      "6fec099f-5d71-4201-8d2b-6d021a941965": {
        "connections": {
          "outcome": "1231e2b4-7f5c-4ae5-8bf9-574be4e330be",
        },
        "displayName": "Collect Preferences",
        "nodeType": "PageNode",
        "x": 366,
        "y": 357,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 860,
        "y": 267,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 860,
        "y": 407,
      },
      "startNode": {
        "x": 26,
        "y": 233.5,
      },
    },
    "uiConfig": {
      "categories": "["Progressive Profile","Helper"]",
    },
  },
  {
    "_id": "Registration",
    "_rev": "1717958262",
    "description": "Platform Registration Tree",
    "enabled": true,
    "entryNodeId": "831f93ba-5b22-4e51-8971-a04c5055035a",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "13438b92-ea68-4a5e-9303-9b331e46ee94": {
        "connections": {
          "outcome": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Count Login",
        "nodeType": "IncrementLoginCountNode",
        "x": 2036,
        "y": 110.33333333333331,
      },
      "1fbf8ecf-b7b8-41f2-8db5-04950d688d7e": {
        "connections": {
          "false": "85e2196e-78b9-4f94-a816-bb1e14f3e35b",
          "true": "526e754e-8df2-4add-91b7-dbcc1193e851",
        },
        "displayName": "Check by username",
        "nodeType": "IdentifyExistingUserNode",
        "x": 554,
        "y": 621.7666625976562,
      },
      "40b310ac-6f81-4d14-96e7-d89e55bd5ed8": {
        "connections": {
          "ACCOUNT_EXISTS": "65809f1c-abc9-4be8-b804-c2462d80ed31",
          "NO_ACCOUNT": "65809f1c-abc9-4be8-b804-c2462d80ed31",
        },
        "displayName": "Social Login",
        "nodeType": "SocialProviderHandlerNode",
        "x": 570,
        "y": 19,
      },
      "4485f7e1-5a8f-4ee1-9001-181a256d7ee2": {
        "connections": {
          "outcome": "df14d9b2-b421-4933-afd6-66a8ae5b4a5d",
        },
        "displayName": "Social Confirmation Page",
        "nodeType": "PageNode",
        "x": 780,
        "y": 149,
      },
      "526e754e-8df2-4add-91b7-dbcc1193e851": {
        "connections": {
          "false": "831f93ba-5b22-4e51-8971-a04c5055035a",
          "true": "85e2196e-78b9-4f94-a816-bb1e14f3e35b",
        },
        "displayName": "Already Exists Dialog",
        "nodeType": "MessageNode",
        "x": 776,
        "y": 544.7666625976562,
      },
      "65809f1c-abc9-4be8-b804-c2462d80ed31": {
        "connections": {
          "false": "4485f7e1-5a8f-4ee1-9001-181a256d7ee2",
          "true": "a029fdc2-64bb-467e-8fe8-5209afa4ee7e",
        },
        "displayName": "Check by username",
        "nodeType": "IdentifyExistingUserNode",
        "x": 780,
        "y": 22.015625,
      },
      "831f93ba-5b22-4e51-8971-a04c5055035a": {
        "connections": {
          "localAuthentication": "1fbf8ecf-b7b8-41f2-8db5-04950d688d7e",
          "socialAuthentication": "40b310ac-6f81-4d14-96e7-d89e55bd5ed8",
        },
        "displayName": "Registration Page",
        "nodeType": "PageNode",
        "x": 356,
        "y": 164,
      },
      "85e2196e-78b9-4f94-a816-bb1e14f3e35b": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "f833dcc2-3a65-4ed6-97fb-fbb889f19c83",
        },
        "displayName": "Terms Of Use",
        "nodeType": "PageNode",
        "x": 1636,
        "y": 362.76666259765625,
      },
      "a029fdc2-64bb-467e-8fe8-5209afa4ee7e": {
        "connections": {
          "false": "831f93ba-5b22-4e51-8971-a04c5055035a",
          "true": "13438b92-ea68-4a5e-9303-9b331e46ee94",
        },
        "displayName": "Already Exists Dialog",
        "nodeType": "MessageNode",
        "x": 1440,
        "y": 27.76666259765625,
      },
      "b5739e42-5203-4e8b-9600-6efe99098966": {
        "connections": {
          "EMAIL_NOT_SENT": "e301438c-0bd0-429c-ab0c-66126501069a",
          "EMAIL_SENT": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Welcome Email",
        "nodeType": "EmailTemplateNode",
        "x": 2250,
        "y": 278.76666259765625,
      },
      "bf2b29b0-c46d-42ed-8fc3-1a94e3919cfb": {
        "connections": {
          "outcome": "b5739e42-5203-4e8b-9600-6efe99098966",
        },
        "displayName": "Count Login",
        "nodeType": "IncrementLoginCountNode",
        "x": 2042,
        "y": 304.76666259765625,
      },
      "df14d9b2-b421-4933-afd6-66a8ae5b4a5d": {
        "connections": {
          "false": "85e2196e-78b9-4f94-a816-bb1e14f3e35b",
          "true": "a029fdc2-64bb-467e-8fe8-5209afa4ee7e",
        },
        "displayName": "Check by username",
        "nodeType": "IdentifyExistingUserNode",
        "x": 1230,
        "y": 183.015625,
      },
      "f833dcc2-3a65-4ed6-97fb-fbb889f19c83": {
        "connections": {
          "CREATED": "bf2b29b0-c46d-42ed-8fc3-1a94e3919cfb",
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
        },
        "displayName": "Create Account",
        "nodeType": "CreateObjectNode",
        "x": 1863,
        "y": 392,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 2888,
        "y": 108.5,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 2908,
        "y": 661.6666666666666,
      },
      "startNode": {
        "x": 70,
        "y": 269.5,
      },
    },
    "uiConfig": {
      "categories": "["Registration"]",
    },
  },
  {
    "_id": "ResetPassword",
    "_rev": "1107667975",
    "description": "Reset Password Tree",
    "enabled": true,
    "entryNodeId": "0ae0593b-887e-48f4-92b3-69c5a6aa76e0",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "0ae0593b-887e-48f4-92b3-69c5a6aa76e0": {
        "connections": {
          "outcome": "73d83a7f-452e-47a0-ba47-593a483d2e11",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 210,
        "y": 127.5,
      },
      "273557b0-0791-418a-95e2-c8d7aaa3a31a": {
        "connections": {
          "outcome": "9c84ee8f-2493-44a6-a99c-ada43e933fae",
        },
        "displayName": "Email Suspend Node",
        "nodeType": "EmailSuspendNode",
        "x": 702,
        "y": 162.5,
      },
      "73d83a7f-452e-47a0-ba47-593a483d2e11": {
        "connections": {
          "false": "273557b0-0791-418a-95e2-c8d7aaa3a31a",
          "true": "273557b0-0791-418a-95e2-c8d7aaa3a31a",
        },
        "displayName": "Identify Existing User",
        "nodeType": "IdentifyExistingUserNode",
        "x": 455,
        "y": 137,
      },
      "9c84ee8f-2493-44a6-a99c-ada43e933fae": {
        "connections": {
          "outcome": "dbae03a7-208a-4a27-b089-ef2c6fd6cbe8",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 944,
        "y": 127.5,
      },
      "dbae03a7-208a-4a27-b089-ef2c6fd6cbe8": {
        "connections": {
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "PATCHED": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Patch Object",
        "nodeType": "PatchObjectNode",
        "x": 1189,
        "y": 137,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1419,
        "y": 80,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1419,
        "y": 230,
      },
      "startNode": {
        "x": 70,
        "y": 155,
      },
    },
    "uiConfig": {},
  },
  {
    "_id": "UpdatePassword",
    "_rev": "1868328802",
    "description": "Update password using active session",
    "enabled": true,
    "entryNodeId": "010efe4f-d193-412d-a54b-c869c52f64b5",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "010efe4f-d193-412d-a54b-c869c52f64b5": {
        "connections": {
          "outcome": "68994eef-5f90-4e33-ad6b-592e41521247",
        },
        "displayName": "Get Session Data",
        "nodeType": "SessionDataNode",
        "x": 122,
        "y": 129,
      },
      "214d2094-f97d-43f8-a354-0d7ab6ed9c2a": {
        "connections": {
          "outcome": "fa98eb20-ce0e-461f-b102-cf997e047950",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 526,
        "y": 46,
      },
      "68994eef-5f90-4e33-ad6b-592e41521247": {
        "connections": {
          "false": "84ab630f-1b27-4cf9-ae98-32e3c0d55d41",
          "true": "214d2094-f97d-43f8-a354-0d7ab6ed9c2a",
        },
        "displayName": "Attribute Present Decision",
        "nodeType": "AttributePresentDecisionNode",
        "x": 288,
        "y": 133,
      },
      "84ab630f-1b27-4cf9-ae98-32e3c0d55d41": {
        "connections": {
          "outcome": "a583cf67-96cd-48ad-bbaf-22fd0f38c996",
        },
        "displayName": "Email Suspend Node",
        "nodeType": "EmailSuspendNode",
        "x": 659,
        "y": 223,
      },
      "a583cf67-96cd-48ad-bbaf-22fd0f38c996": {
        "connections": {
          "outcome": "a5eb71d0-91eb-4cdc-9816-fd8572868eb0",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 943,
        "y": 30,
      },
      "a5eb71d0-91eb-4cdc-9816-fd8572868eb0": {
        "connections": {
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "PATCHED": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Patch Object",
        "nodeType": "PatchObjectNode",
        "x": 1062,
        "y": 189,
      },
      "fa98eb20-ce0e-461f-b102-cf997e047950": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "a583cf67-96cd-48ad-bbaf-22fd0f38c996",
        },
        "displayName": "Data Store Decision",
        "nodeType": "DataStoreDecisionNode",
        "x": 722,
        "y": 45,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1212,
        "y": 128,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 939,
        "y": 290,
      },
      "startNode": {
        "x": 50,
        "y": 25,
      },
    },
    "uiConfig": {},
  },
  {
    "_id": "UpdateUsername",
    "_rev": "-347206694",
    "enabled": true,
    "entryNodeId": "d3bb5c99-33a4-43ae-ad61-6956afea9672",
    "identityResource": "managed/alpha_user",
    "nodes": {
      "3f565020-92bf-4e85-a4e6-5900ed3dec32": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "e79fc9c0-ed2c-4612-a6ce-14c09debce74",
        },
        "displayName": "Identify Existing User",
        "nodeType": "IdentifyExistingUserNode",
        "x": 347,
        "y": 183,
      },
      "41225f52-2f77-4f80-aa58-d4cdfe49793f": {
        "connections": {
          "outcome": "624f560f-8b79-44ad-8866-afd40f403fee",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 1280,
        "y": 60,
      },
      "624f560f-8b79-44ad-8866-afd40f403fee": {
        "connections": {
          "FAILURE": "e301438c-0bd0-429c-ab0c-66126501069a",
          "PATCHED": "70e691a5-1e33-4ac3-a356-e7b6d60d92e0",
        },
        "displayName": "Change Username",
        "nodeType": "PatchObjectNode",
        "x": 1519,
        "y": 76,
      },
      "6c35b1f9-23e9-43b2-b52f-924defe652c4": {
        "connections": {
          "false": "e301438c-0bd0-429c-ab0c-66126501069a",
          "true": "41225f52-2f77-4f80-aa58-d4cdfe49793f",
        },
        "displayName": "Data Store Decision",
        "nodeType": "DataStoreDecisionNode",
        "x": 1041,
        "y": 63,
      },
      "d3bb5c99-33a4-43ae-ad61-6956afea9672": {
        "connections": {
          "outcome": "3f565020-92bf-4e85-a4e6-5900ed3dec32",
        },
        "displayName": "Get Session Data",
        "nodeType": "SessionDataNode",
        "x": 152,
        "y": 85,
      },
      "e79fc9c0-ed2c-4612-a6ce-14c09debce74": {
        "connections": {
          "outcome": "6c35b1f9-23e9-43b2-b52f-924defe652c4",
        },
        "displayName": "Page Node",
        "nodeType": "PageNode",
        "x": 792,
        "y": 49,
      },
    },
    "staticNodes": {
      "70e691a5-1e33-4ac3-a356-e7b6d60d92e0": {
        "x": 1818,
        "y": 87,
      },
      "e301438c-0bd0-429c-ab0c-66126501069a": {
        "x": 1824,
        "y": 304,
      },
      "startNode": {
        "x": 50,
        "y": 85,
      },
    },
    "uiConfig": {},
  },
]
`;
